# lore-mcp

./: README.md  install.sh  pyproject.toml
.claude/skills/: lore-onboard
docs/: content-management-ux.md  gamified-onboarding.md  manual-capture-ux.md  onboarding-ux.md
lore/: __init__.py  automation.py  blueprint.py  cli.py  mcp.py  paths.py  sources.py  store.py  ui.py
skills/lore-onboard/: SKILL.md  persona-interview.md
skills/lore-onboarding/: SKILL.md
tests/: test_lore.py
