[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-mcp"
version = "0.1.0"
description = "Portable, private, monetizable context for personal agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
lore = "lore.cli:main"

[tool.setuptools]
packages = ["lore"]

